apps/archive/minecraft/minecraft-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minecraft-https
  namespace: minecraft
  annotations:
    gethomepage.dev/href: "https://minecraft.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Minecraft"
    gethomepage.dev/description: "Bedrock server"
    gethomepage.dev/group: "Games"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`minecraft.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: minecraft-landing
          port: 80
  tls: {}
